switch unit to prevent shifting page

--- a/blocks/v2-hero/v2-hero.css
+++ b/blocks/v2-hero/v2-hero.css
@@ -36,13 +36,13 @@
   height: calc(100vh - (var(--nav-height) + var(--inpage-navigation-height) - 2px));
 }
 
-@supports (height: 1dvh) {
+@supports (height: 1svh) {
   .v2-hero {
-    height: calc(100dvh - var(--nav-height));
+    height: calc(100svh - var(--nav-height));
   }
 
   .v2-inpage-navigation-wrapper + .v2-hero-container .v2-hero {
-    height: calc(100dvh - (var(--nav-height) + var(--inpage-navigation-height) - 2px));
+    height: calc(100svh - (var(--nav-height) + var(--inpage-navigation-height) - 2px));
   }
 }
 
